# QtBreeze

./: CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  image_viewer.hpp  main.cpp  main_window.cpp  main_window.hpp  mdi_area.cpp  mdi_area.hpp
examples/image_viewer/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  mdi_area.cpp  mdi_area.hpp
